CICD:#223 csrf対策に環境変数を明示的に示す

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,3 +94,11 @@ jobs:
 
       - name: Run Tests
         run: php artisan test --testsuite=Feature
+        env:
+          APP_ENV: testing
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: ems
+          DB_USERNAME: ems
+          DB_PASSWORD: password
