CICD:#223 csrfを無効にする設定にする

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,3 +102,5 @@ jobs:
           DB_DATABASE: ems
           DB_USERNAME: ems
           DB_PASSWORD: password
+          SESSION_DRIVER: array
+          SESSION_COOKIE_SECURE: false
