CICD:#223 DISABLE_CSRFの値で、CI環境ではcsrfを無効にする

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,3 +104,4 @@ jobs:
           DB_PASSWORD: password
           SESSION_DRIVER: array
           SESSION_COOKIE_SECURE: false
+          DISABLE_CSRF: true
